--- a/package.json
+++ b/package.json
@@ -1,38 +1,16 @@
 {
-  "name": "ytdownload",
-  "productName": "ytdownload",
+  "name": "yt",
   "version": "1.0.0",
-  "description": "My Electron application description",
-  "main": "src/main.js",
+  "description": "",
+  "main": "main.js",
   "scripts": {
-    "start": "electron-forge start",
-    "package": "electron-forge package",
-    "make": "electron-forge make",
-    "publish": "electron-forge publish",
-    "lint": "echo \"No linting configured\""
+    "start": "electron .",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "devDependencies": {
-    "@electron-forge/cli": "^7.3.0",
-    "@electron-forge/maker-deb": "^7.3.0",
-    "@electron-forge/maker-rpm": "^7.3.0",
-    "@electron-forge/maker-squirrel": "^7.3.0",
-    "@electron-forge/maker-zip": "^7.3.0",
-    "@electron-forge/plugin-auto-unpack-natives": "^7.3.0",
-    "@electron-forge/plugin-fuses": "^7.3.0",
-    "@electron/fuses": "^1.7.0",
-    "electron": "29.0.1"
-  },
-  "keywords": [],
-  "author": "joanr",
-  "license": "MIT",
+  "author": "Joan R",
+  "license": "ISC",
   "dependencies": {
-    "document": "^0.4.7",
-    "electron-dialog": "^2.0.0",
-    "electron-reloader": "^1.2.3",
-    "electron-remote": "^1.3.0",
-    "electron-squirrel-startup": "^1.0.0",
-    "fs": "^0.0.1-security",
-    "node-webvtt-youtube": "^1.0.0",
-    "youtube-dl": "^3.5.0"
+    "electron": "^29.0.1",
+    "electron-dl": "^3.5.2"
   }
 }
